src/test/resources/etapa4/failing/wrongParamsSize.ru
/? la cantidad de parametros no coincide con la cantidad de argumentos

struct A{
}
impl A{
    .(){}
    fn metodo1 (Str f) -> void {

    }

    fn m2 () -> void {
        Str f;
        (metodo1(f, 48));
    }
}


start {}